# FinMiner_SimpleParallelAlgorinm

./: CMakeLists.txt  README.md  fnv.cpp  fnv.h  getNonce.cpp  getNonce.h  getTrailingZeroesCount.cpp  getTrailingZeroesCount.h  jenkins.cpp  jenkins.h  main.cpp  pjw.cpp  pjw.h
